--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you love hot wings as much as I do.</h3>
-      <p class="contact-message">Love hot wings as much as I do? Let's talk about how awsome they are! Swe can code while we eat hot wings .</p>
+      <p class="contact-message">Love hot wings as much as I do? Let's talk about how awsome they are! So we can code while we eat hot wings .</p>
       <a class="btn" href="mailto:ar464211@gmail.com.com">CONTACT ME</a>
     </div>
   </div>
